<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesion"
    android:background="@color/background_aplicacion">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logotipoaplicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_correo_iniciar_sesion"
        android:layout_width="300dp"
        android:layout_height="48sp"
        android:layout_marginTop="150dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/allerta"
        android:hint="@string/label_correo_electronico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/edit_contrasenia_iniciar_sesion"
        android:layout_width="300dp"
        android:layout_height="48sp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/allerta"
        android:hint="@string/label_contrasenia"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_correo_iniciar_sesion" />


    <Button
        android:id="@+id/btn_iniciar_sesion"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_bordes_redondos"
        android:text="@string/txt_btn_iniciar_sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_contrasenia_iniciar_sesion" />

    <TextView
        android:id="@+id/link_recuperar_contra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/allerta"
        android:textSize="18sp"
        android:text="@string/label_recuperar_contrasenia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_iniciar_sesion" />

    <TextView
        android:id="@+id/link_no_tengo_cuenta_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta"
        android:textSize="18sp"
        android:text="@string/label_no_tienes_cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link_recuperar_contra"
        app:layout_constraintVertical_bias="0.86" />

</androidx.constraintlayout.widget.ConstraintLayout>