<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_aplicacion"
    tools:context=".UsuarioRegistrado.ModificarDatosUsuario"
    >

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/allerta"
        android:scaleType="centerCrop"
        android:text="@string/label_modificar_perfil"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagenPerfil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/circulo_fondo"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />


    <ImageView
        android:id="@+id/btn_mod_image"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="-24dp"
        android:background="@drawable/circulo_morado"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/lapiz_editar"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenPerfil"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="200dp"
        android:fontFamily="@font/allerta"
        android:text="@string/label_nombre"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenPerfil" />

    <EditText
        android:id="@+id/edit_nuevo_nombre_registro"
        android:layout_width="300dp"
        android:layout_height="48sp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/allerta"
        android:hint="Nombre"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/allerta"
        android:text="@string/label_contrasenia_nueva"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nuevo_nombre_registro" />

    <EditText
        android:id="@+id/edit_contra_registro"
        android:layout_width="300dp"
        android:layout_height="48sp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/allerta"
        android:hint="@string/label_ejemplo_contrasenia"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/allerta"
        android:text="@string/label_repetir_contrasenia_nueva"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_contra_registro" />

    <EditText
        android:id="@+id/edit_repetir_contra_registro"
        android:layout_width="300dp"
        android:layout_height="48sp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/allerta"
        android:hint="@string/label_ejemplo_contrasenia"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/edit_repetir_contra_registro"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/btn_pasar_a_premium"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="45dp"
            android:background="@drawable/btn_bordes_redondos"
            android:text="@string/txt_btn_pasar_a_premium"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="596dp" />

        <Button
            android:id="@+id/btn_aplicar_cambios"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:background="@drawable/btn_bordes_redondos"
            android:text="@string/txt_btn_aplicar_cambios"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="596dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>